--- a/fe/index.html
+++ b/fe/index.html
@@ -16,81 +16,75 @@
             <div class="container" id="addContainer"></div>
             <div class="container" id="addPreview"></div>
         </div>
+        <div id="status-box"></div>
         <div class="ccenter container">
-            <label for="offset">Next Offset: </label>
-            <input type="number" name="offset" id="offset">
-            <label for="offset">Book ID: </label>
+            <label for="lastID">Next id: </label>
+            <input type="number" name="lastID" id="lastID">
+            <label for="lastID">Book ID: </label>
             <input type="number" name="id" id="book_id">
             <button id="search">Search</button>
         </div>
         <div id="data">
         </div>
 
-        <script src="js/index.js">        </script>
         <script src="js/script.js">        </script>
         <script>
             generateNavBar()
             let limit = 100
-            let fetchAllBooks = () => fetchData({
-                url: `/internal/books?offset=${document.getElementById('offset').value || 0}&limit=${limit}`,
-                fetchOptions: {
+            let fetchAllBooks = async () => {
+                let data = await fetchData(`/internal/books?lastID=${document.getElementById('lastID').value || 0}&limit=${limit}&ord=asc`, {
                     method: 'GET',
                     headers: {
                         'Content-Type': 'application/json'
                     },
                     credentials: 'include'
-
-                },
-                next: (data) => {
-                    console.log(data)
-                    let grid = createGridFromData({
-                        thumbnailKey: 'cover',
-                        data: data,
-                        dataOverlayFormatter: (data) => {
-                            return `${data.title} by ${data.author}`
-                        },
-                    })
-                    document.getElementById("data").innerHTML = grid
-                    if (data.length == limit) {
-                        document.getElementById('offset').value = data[data.length - 1].id
-                    } else {
-                        document.getElementById('offset').value = 0
-                    }
-                }
-            })
-
-            fetchAllBooks()
-            let fetchOneBook = () => fetchData({
-                url: `/internal/book/${document.getElementById('book_id').value}`,
-                fetchOptions: {
-                    method: 'GET',
-                    headers: {
-                        'Content-Type': 'application/json'
+                })
+                console.log(data)
+                let grid = createGridFromData({
+                    thumbnailKey: 'cover',
+                    data: data,
+                    dataOverlayFormatter: (item) => {
+                        return `${item.id}:${item.title} by ${item.author}. ${item.count} available`
                     },
-                    credentials: 'include'
-
-                },
-                next: (data) => {
-                    data = [data]
-                    console.log(data)
-                    let grid = createGridFromData({
-                        thumbnailKey: 'cover',
-                        data: data,
-                        dataOverlayFormatter: (data) => {
-                            return `${data.title} by ${data.author}`
-                        },
-                    })
-                    document.getElementById("data").innerHTML = grid
-                    document.getElementById('offset').value = 0
-                    document.getElementById('book_id').value = ""
-                }
-            })
-            document.getElementById("search").addEventListener('click', e => {
-                e.preventDefault()
-                if (!document.getElementById('book_id').value) {
-                    fetchAllBooks()
+                })
+                document.getElementById("data").innerHTML = grid
+                if (data.length == limit) {
+                    document.getElementById('lastID').value = data[data.length - 1].id
                 } else {
-                    fetchOneBook()
+                    document.getElementById('lastID').value = 0
+                }
+            }
+
+            window.onload = fetchAllBooks
+            let fetchOneBook = async (id) => {
+                let data = await fetchData(`/internal/book/${id}`,
+                    {
+                        method: 'GET',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        credentials: 'include'
+
+                    }
+                )
+                console.log(data)
+                let grid = createGridFromData({
+                    thumbnailKey: 'cover',
+                    data: [data],
+                    dataOverlayFormatter: (data) => {
+                        return `${data.title} by ${data.author}`
+                    },
+                })
+                document.getElementById("data").innerHTML = grid
+                document.getElementById('book_id').value = ''
+            }
+            document.getElementById("search").addEventListener('click', async e => {
+                e.preventDefault()
+                let id = document.getElementById('book_id').value
+                if (!id) {
+                    await fetchAllBooks()
+                } else {
+                    await fetchOneBook(id)
                 }
             })
         </script>
