--- a/fe/logout.html
+++ b/fe/logout.html
@@ -18,6 +18,7 @@
                 credentials: 'include'
             }).then(() => {
                 alert('Logged out')
+                localStorage.removeItem('user_type')
                 window.location.href = '/fe/login.html'
             })
         }
